[package]
name = "rust-code-assignment"
version = "0.1.0"
edition = "2021"
autolib = false

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["env", "derive"] }
datafusion = { version = "46.0.1", default-features = false, features = ["parquet"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1.88"
url = "2.5.4"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.19.1"
